Improve code quality.
- Replace System.err.println() with logger call.
- Eliminate nonstandard variable name.
- Reduce duplication from tests using utility method.
- Utility classes should have private constructor.